package com.matriculas.services;

public class Secretaria extends Usuario {
    public void gerarCurriculo() {

    }

    public void manterDisciplina() {

    }

    public void manterProfessor() {

    }

    public void manterAluno() {

    }

}
