package com.matriculas.services;

public enum TipoDisciplina {
    OBRIGATORIA, OPTATIVA;
}
