@startuml
package "com.matriculas.services" {

    class Curso {
        - String nome
        - Integer creditos
        - ArrayList<Disciplina> disciplinasCurso
        + adicionarDisciplina(Disciplina disciplina)
    }

    class Disciplina {
        - String nome
        - Integer creditos
        - Integer maximoAlunos = 60
        - Integer minimoAlunos = 3
        - TipoDisciplina tipoDisciplina
        + verificarStatus()
        + cancelarDisciplina()
    }

    class TurmaOfertada {
        - Disciplina disciplina
        - Professor professor
        - ArrayList<Aluno> alunosInscritos
        - Status status
        + verificarStatus(): Status
        + adicionarAluno(Aluno aluno)
        + removerAluno(Aluno aluno)
        + encerrarTurma()
    }
    
    class Usuario {
        - String nome
        - String login
        - String senha
    }

    class Aluno extends Usuario {
        - String matricula
        - ArrayList<Disciplina> disciplinasInscritas
        + matricularDisciplina(Disciplina disciplina)
        + cancelarDisciplina(Disciplina disciplina)
        + consultarDisciplina(Disciplina disciplina)
        + pagarCobranca()
    }

    class Professor extends Usuario {
        - String matricula
        - ArrayList<Disciplina> disciplinasLecionadas
        + consultarAlunosMatriculados(): ArrayList<Aluno>
    }

    class Secretaria extends Usuario {
        + gerarCurriculo()
        + manterDisciplina()
        + manterProfessor()
        + manterAluno()
    }

    enum TipoDisciplina {
        OBRIGATORIA, OPTATIVA
    }

    enum Status {
        ATIVA, INATIVA, ENCERRADA, CONCLUIDA
    }
    Curso "1" --> "0..*" Disciplina

    TurmaOfertada "1" --> "1" Disciplina
    TurmaOfertada "1" --> "1" Professor
    TurmaOfertada "0..*" --> "0..*" Aluno : inscritos

}
@enduml